// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationInput renders correctly (with min props) 1`] = `
<div>
  <Geocoder
    accessToken=""
    bbox=""
    defaultInputValue=""
    endpoint="https://api.tiles.mapbox.com"
    focusOnMount={true}
    inputClass=""
    inputPlaceholder="Search for a location..."
    inputPosition="top"
    onInputChange={[Function]}
    onSelect={[Function]}
    onSuggest={[Function]}
    proximity=""
    resultClass=""
    resultFocusClass="strong"
    resultsClass=""
    showLoader={true}
    source="mapbox.places"
    types=""
  />
</div>
`;

exports[`LocationInput renders correctly with some default props 1`] = `
<div>
  <Geocoder
    accessToken=""
    bbox=""
    defaultInputValue="123 main st. San Francisco, CA"
    endpoint="https://api.tiles.mapbox.com"
    focusOnMount={true}
    inputClass=""
    inputPlaceholder="Search for a location..."
    inputPosition="top"
    onInputChange={[Function]}
    onSelect={[Function]}
    onSuggest={[Function]}
    proximity=""
    resultClass=""
    resultFocusClass="strong"
    resultsClass=""
    showLoader={true}
    source="mapbox.places"
    types=""
  />
</div>
`;
